[package]
name = "uic-image-provider"
version = "0.0.1"
authors = ["root"]
edition = "2018"
license = "Copyright 2021 Silicon Laboratories Inc. www.silabs.com\nThe licensor of this software is Silicon Laboratories Inc. Your use of this\nsoftware is governed by the terms of Silicon Labs Master Software License\nAgreement (MSLA) available at\nwww.silabs.com/about-us/legal/master-software-license-agreement. This\nsoftware is distributed to you in Source Code format and is governed by the\nsections of the MSLA applicable to Source Code."
description = "Unified IOT OTA image provider"

[package.metadata.deb]
name = "uic-image-provider"
maintainer = "Silicon Labs"
depends = "libmosquitto1, libssl1.1, libc6, libgcc1, libuic"
assets = [
    ["target/release/uic-image-provider", "usr/bin/", "755"]
]
maintainer-scripts = "debconf/"
systemd-units = { enable = true }

[dependencies]
mosquitto-client = { git = "https://github.com/jsloth/mosquitto-client" }
json = "*"
uic_log = { package = "uic_log_rs", path = "../../components/uic_rust/uic_log_rs" }
uic_config = { package = "uic_config_rs", path = "../../components/uic_rust/uic_config_rs" }
lazy_static = "1.4.0"
md5 = "0.7.0"
base64 = "0.13.0"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.0", features = ["termination"] }

[dev-dependencies]
serial_test = "*"

[build-dependencies]
uic_bindgen = { path = "../../components/uic_rust/uic_bindgen" }
