[package]
name = "uic-image-provider"
version = "0.0.1"
authors = ["root"]
edition = "2021"
license = "Copyright 2021 Silicon Laboratories Inc. www.silabs.com\nThe licensor of this software is Silicon Laboratories Inc. Your use of this\nsoftware is governed by the terms of Silicon Labs Master Software License\nAgreement (MSLA) available at\nwww.silabs.com/about-us/legal/master-software-license-agreement. This\nsoftware is distributed to you in Source Code format and is governed by the\nsections of the MSLA applicable to Source Code."
description = "Unified IOT OTA image provider"

[package.metadata.deb]
name = "uic-image-provider"
maintainer = "Silicon Labs"
depends = "libuic"
maintainer-scripts = "debconf/"
systemd-units = { enable = true }

[dependencies]
json = "0.12.*"
unify_log_sys = { path = "../../components/uic_rust/unify_log_sys" }
unify_config_sys = { path = "../../components/uic_rust/unify_config_sys" }
unify_mqtt_sys = { path=  "../../components/uic_rust/unify_mqtt_sys" }
unify_sl_status_sys = { path=  "../../components/uic_rust/unify_sl_status_sys" }
lazy_static = "1.4.0"
md5 = "0.7.0"
base64 = "0.13.0"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.0", features = ["termination"] }

[dev-dependencies]
serial_test = "*"

[build-dependencies]
unify_build_utils = { path = "../../components/uic_rust/unify_build_utils" }
anyhow = "*"