[package]
name = "uic-nal"
version = "0.0.1"
authors = ["root"]
edition = "2021"
license = "Copyright 2021 Silicon Laboratories Inc. www.silabs.com\nThe licensor of this software is Silicon Laboratories Inc. Your use of this\nsoftware is governed by the terms of Silicon Labs Master Software License\nAgreement (MSLA) available at\nwww.silabs.com/about-us/legal/master-software-license-agreement. This\nsoftware is distributed to you in Source Code format and is governed by the\nsections of the MSLA applicable to Source Code."
description = "The Name and Location Service is a helper MQTT component that allows to perform book-keeping on text names and locations that have been assigned"

[package.metadata.deb]
name = "uic-nal"
maintainer = "Silicon Labs"
depends = "libuic"
maintainer-scripts = "debconf/"
systemd-units = { enable = true }

[dependencies]
rusqlite = "0.26.*"
serde_json = "1.0.64"
regex = "1.5.*"
unify_log_sys = { path = "../../components/uic_rust/unify_log_sys" }
unify_config_sys = { path = "../../components/uic_rust/unify_config_sys" }
unify_mqtt_sys = {path = "../../components/uic_rust/unify_mqtt_sys" }
unify_sl_status_sys = {path = "../../components/uic_rust/unify_sl_status_sys" }
unify_validator_sys = { path = "../../components/uic_rust/unify_validator_sys" }

[dev-dependencies]
mockall= "0.11.*"
serial_test = "0.5.*"

[build-dependencies]
unify_build_utils = { path = "../../components/uic_rust/unify_build_utils" }
anyhow = "*"