[package]
name = "uic-upti-cap"
version = "0.0.1"
authors = ["Sergiy Pastukh <sepastuk@silabs.com>"]
edition = "2018"
license = "Copyright 2021 Silicon Laboratories Inc. www.silabs.com\nThe licensor of this software is Silicon Laboratories Inc. Your use of this\nsoftware is governed by the terms of Silicon Labs Master Software License\nAgreement (MSLA) available at\nwww.silabs.com/about-us/legal/master-software-license-agreement. This\nsoftware is distributed to you in Source Code format and is governed by the\nsections of the MSLA applicable to Source Code."
description = "PTI Service"

[package.metadata.deb]
name = "uic-upti-cap"
maintainer = "Silicon Labs"
depends = "libmosquitto1, libssl1.1, libc6, libgcc1, libuic"
maintainer-scripts = "debconf/"
systemd-units = { enable = true }

[dependencies]
get_if_addrs = "0.5.3"
chrono = "0.4.19"
json = "0.12.*"
lazy_static = "1.4.0"
stoppable_thread = "0.2.1"
ctrlc = { version = "3.0", features = ["termination"] }

unify_log_sys = { path = "../../components/uic_rust/unify_log_sys" }
unify_config_sys = { path = "../../components/uic_rust/unify_config_sys" }
unify_middleware = {path = "../../components/uic_rust/unify_middleware" }
unify_sl_status_sys = {path = "../../components/uic_rust/unify_sl_status_sys" }

[dev-dependencies]
serial_test = "*"
