[package]
name = "uic-upti-cap"
version = "0.0.1"
authors = ["Sergiy Pastukh <sepastuk@silabs.com>"]
edition = "2018"
license = "Copyright 2021 Silicon Laboratories Inc. www.silabs.com\nThe licensor of this software is Silicon Laboratories Inc. Your use of this\nsoftware is governed by the terms of Silicon Labs Master Software License\nAgreement (MSLA) available at\nwww.silabs.com/about-us/legal/master-software-license-agreement. This\nsoftware is distributed to you in Source Code format and is governed by the\nsections of the MSLA applicable to Source Code."
description = "PTI Service"

[package.metadata.deb]
name = "uic-upti-cap"
maintainer = "Silicon Labs"
maintainer-scripts = "debconf/"
systemd-units = { enable = true }

[dependencies]
get_if_addrs = "0.5.3"
chrono = "0.4.19"
json = "0.12.*"
lazy_static = "1.4.0"
stoppable_thread = "0.2.1"
ctrlc = { version = "3.0", features = ["termination"] }

unify_log_sys = { path = "../../components/uic_rust/unify_log_sys" }
unify_config_sys = { path = "../../components/uic_rust/unify_config_sys" }
unify_mqtt_sys = {path = "../../components/uic_rust/unify_mqtt_sys" }
unify_sl_status_sys = {path = "../../components/uic_rust/unify_sl_status_sys" }
unify_application_monitoring_sys = { path = "../../components/uic_rust/unify_application_monitoring_sys" }

[dev-dependencies]
serial_test = "*"
unify_build_utils = { path = "../../components/uic_rust/unify_build_utils" }

[build-dependencies]
unify_build_utils = { path = "../../components/uic_rust/unify_build_utils" }
anyhow = "*"