[package]
name = "uic-upvl"
version = "0.0.1"
authors = ["root"]
edition = "2018"
license = "Copyright 2020 Silicon Laboratories Inc. www.silabs.com\nThe licensor of this software is Silicon Laboratories Inc. Your use of this\nsoftware is governed by the terms of Silicon Labs Master Software License\nAgreement (MSLA) available at\nwww.silabs.com/about-us/legal/master-software-license-agreement. This\nsoftware is distributed to you in Source Code format and is governed by the\nsections of the MSLA applicable to Source Code."
description = "Unify SDK Provisioning List"

[package.metadata.deb]
name = "uic-upvl"
maintainer = "Silicon Labs"
#depends = "$auto"
depends = "libmosquitto1, libssl1.1, libc6, libgcc1, libsqlite3-0, mosquitto, libuic"
assets = [
    ["target/release/uic-upvl", "usr/bin/", "755"]
]
maintainer-scripts = "debconf/"
systemd-units = { enable = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
mosquitto-client =  { git = "https://github.com/jsloth/mosquitto-client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.25"

upvl_log = { package = "uic_log_rs", path = "../../components/uic_rust/uic_log_rs" }
upvl_conf = { package = "uic_config_rs", path = "../../components/uic_rust/uic_config_rs" }

[build-dependencies]
uic_bindgen = { path = "../../components/uic_rust/uic_bindgen" }
