[package]
name = "uic-upvl"
version = "0.0.1"
authors = ["root"]
edition = "2021"
license = "Copyright 2020 Silicon Laboratories Inc. www.silabs.com\nThe licensor of this software is Silicon Laboratories Inc. Your use of this\nsoftware is governed by the terms of Silicon Labs Master Software License\nAgreement (MSLA) available at\nwww.silabs.com/about-us/legal/master-software-license-agreement. This\nsoftware is distributed to you in Source Code format and is governed by the\nsections of the MSLA applicable to Source Code."
description = "Unify Framework Provisioning List"

[package.metadata.deb]
name = "uic-upvl"
maintainer = "Silicon Labs"
#depends = "$auto"
maintainer-scripts = "debconf/"
systemd-units = { enable = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.26.*"
unify_log_sys = {  path = "../../components/uic_rust/unify_log_sys" }
unify_config_sys = { path = "../../components/uic_rust/unify_config_sys" }
unify_mqtt_sys = {path = "../../components/uic_rust/unify_mqtt_sys" }
unify_sl_status_sys = {path = "../../components/uic_rust/unify_sl_status_sys" }
unify_application_monitoring_sys = { path = "../../components/uic_rust/unify_application_monitoring_sys" }

[dev-dependencies]
mockall= "0.11.*"

[build-dependencies]
unify_build_utils = { path = "../../components/uic_rust/unify_build_utils" }
anyhow = "*"